--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <modelmapper.version>2.3.7</modelmapper.version>
         <validator.version>6.1.5.Final</validator.version>
         <jackson.yml.dataformat.version>2.11.2</jackson.yml.dataformat.version>
+        <liquibase.version>4.0.0</liquibase.version>
     </properties>
 
     <dependencies>
@@ -104,8 +105,12 @@
             <artifactId>jjwt</artifactId>
             <version>${jjwt.version}</version>
         </dependency>
-
-
+        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -132,9 +137,12 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.4.0.905</version>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.0.0</version>
+                <configuration>
+                    <propertyFile>src/main/resources/liquibase.yml</propertyFile>
+                </configuration>
             </plugin>
         </plugins>
     </build>
