--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,19 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/forum
-    username: postgres
-    password: admin
-    driver-class-name: org.postgresql.Driver
-  jackson:
-    mapper:
-      DEFAULT_VIEW_INCLUSION: true
+  profiles:
+    active: prod
+
   jpa:
     show-sql: true
-    hibernate:
-      ddl-auto: none
     properties:
       hibernate:
         format_sql: true
+
   mail:
     host: smtp.mailtrap.io
     port: 587
     username: f7c6241b14b772
     password: 0fbc58b10fc5d9
 
-  liquibase:
-    change-log: classpath:db/changelog/db.changelog-master.xml
+  jackson:
+    mapper:
+      DEFAULT_VIEW_INCLUSION: true
